update pdfbox and fix