@@ -30,7 +30,7 @@ public class MapMap<K1, K2, V> {
 	@SuppressWarnings("unchecked")
 	public MapMap(@SuppressWarnings("rawtypes") Class<? extends Map> mapClass) {
 		try {
-			this.map = mapClass.newInstance();
+			this.map = mapClass.getDeclaredConstructor().newInstance();
 		} catch (Exception e) {
 			throw new RuntimeException(e);
 		}
